# voice_recognition_api

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
.claude/: CLAUDE.md
.claude/skills/deploy/: SKILL.md
.claude/skills/deploy/scripts/: deploy.sh
src/api/: __main__.py  app_factory.py
src/api/composition/: api_config.py  composition.py  composition_root.py
src/api/protocols/: i_get_job_use_case.py  i_health_probe.py  i_submit_job_use_case.py  i_transcribe_use_case.py
src/api/routes/: async_transcribe_route.py  dependencies.py  health_route.py  transcribe_route.py  upload_temp_file.py
src/api/schemas/: async_transcription_schemas.py  health_response.py  segment_schema.py  transcription_response.py
src/client/: __init__.py  http_transcriber.py  http_transcriber_config.py  text_transcriber_adapter.py
src/client/dtos/: segment.py  transcription_result.py
src/client/protocols/: i_transcriber.py
src/transcription/application/protocols/: i_job_repository.py  i_whisper_engine.py
src/transcription/application/use_cases/: get_transcription_job.py  health_probe.py  submit_transcription_job.py  transcribe_audio.py
src/transcription/domain/: exceptions.py  segment.py  transcription_job.py  transcription_job_status.py  transcription_result.py
src/transcription/infrastructure/: faster_whisper_engine.py  in_memory_job_repository.py  whisper_engine_config.py
tests/: test_http_transcriber.py  test_transcribe_audio_use_case.py
